--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 Chris Adams-Adewuni Ifeoluwa<chrisadamsadewuni@gmail.com>
+Alanwoke Martins <alanwokemartins@gmail.com>
